<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_tv_bsb_title">Настройки</string>
    <string name="first_fragment_cb_wind">Ветер</string>
    <string name="first_fragment_cb_wet">Влажность</string>
    <string name="first_fragment_cb_pressure">Давление</string>
    <string name="card_view_tv_item">CityName</string>
    <string name="second_fragment_tv_pressure">Давление %d мм.рт.ст</string>
    <string name="second_fragment_tv_wind">Ветер %d м/с</string>
    <string name="main_activity_et_area_name">area name</string>
    <string name="main_activity_btn_change_area">change area</string>
    <string name="main_activity_btn_load_area">load area</string>
    <string name="main_activity_tv_your_area">Your area</string>
    <string name="json_city_not_found">Город не найден</string>
    <string name="service_message">Текущая температура: %f</string>
    <string name="second_fragment_tv_wet">Влажность %d %%</string>
    <string name="tv_celcium">℃</string>
    <string name="second_fragmend_weather_icon_url">https://openweathermap.org/img/w/%s.png</string>
    <string name="error_msg">Error</string>
    <string name="menu_add_btn">Add</string>
    <string name="btn_menu_clear_all">Очистить все</string>
    <string name="main_activity_tv_your_city">Ваш город:</string>
    <string name="loading_city">Определение...</string>
    <string name="main_activity_btn_your_city">Определить для Вашего местоположения</string>
    <string name="city_not_found">Город не найден</string>

    <string-array name="Cities">    <!--Массив городов на RecyclerView-->
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Мурманск</item>
        <item>Екатеринбург</item>
        <item>Новосибирск</item>
        <item>Самара</item>
    </string-array>

    <string-array name="sky">
        <item>Ясно</item>
        <item>Облачно</item>
        <item>Дождь</item>
        <item>Снег</item>
    </string-array>
</resources>
